--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "platzi-next",
+  "name": "nextjs-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "ai": "^2.2.31",
-    "classnames": "^2.4.0",
+    "@next/bundle-analyzer": "^14.0.4",
+    "ai": "^2.2.23",
+    "classnames": "^2.3.2",
+    "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "next": "14.0.4",
-    "openai": "^4.24.1",
+    "next": "14.0.1",
+    "openai": "^4.19.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "sanitize-html": "^2.11.0",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sanitize-html": "^2.9.5",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.0.1",
     "sass": "^1.69.5",
     "typescript": "^5"
   }
